--- a/public/index.html
+++ b/public/index.html
@@ -13,6 +13,21 @@
       <strong>We're sorry but <%= htmlWebpackPlugin.options.title %> doesn't work properly without JavaScript enabled. Please enable it to continue.</strong>
     </noscript>
     <div id="app"></div>
+    <!--Start of Webchat Script-->
+   <!--Start of Webchat Script-->
+   <div id="gwc-app"></div>
+   <script type="text/javascript">
+       (function () {
+           var s1 = document.createElement("script"), s0 = document.getElementsByTagName("script")[0];
+           s1.async = true;
+           s1.src = 'https://webchat-api.gopage.me/v1/embed/2a39095f-0748-41ed-acb6-6dd4e8d56a90';
+           s1.charset = 'UTF-8';
+           s1.setAttribute('crossorigin', '*');
+           s0.parentNode.insertBefore(s1, s0);
+       })();
+   </script>
+   <!--End of Webchat Script-->
+    <!--End of Webchat Script-->
    
     <!-- <script type="text/javascript" src="../src/module/sb-admin-2.min.js"></script> -->
     <!-- built files will be auto injected -->
