update plugin message

--- a/public/index.html
+++ b/public/index.html
@@ -15,7 +15,7 @@
     <div id="app"></div>
     <!--Start of Webchat Script-->
    <!--Start of Webchat Script-->
-   <div id="gwc-app"></div>
+   <!-- <div id="gwc-app"></div>
    <script type="text/javascript">
        (function () {
            var s1 = document.createElement("script"), s0 = document.getElementsByTagName("script")[0];
@@ -25,9 +25,41 @@
            s1.setAttribute('crossorigin', '*');
            s0.parentNode.insertBefore(s1, s0);
        })();
-   </script>
+   </script> -->
    <!--End of Webchat Script-->
     <!--End of Webchat Script-->
+
+   <!-- Messenger Chat plugin Code -->
+   <div id="fb-root"></div>
+
+   <!-- Your Chat plugin code -->
+   <div id="fb-customer-chat" class="fb-customerchat">
+   </div>
+
+   <script>
+     var chatbox = document.getElementById('fb-customer-chat');
+     chatbox.setAttribute("page_id", "100314329198851");
+     chatbox.setAttribute("attribution", "biz_inbox");
+   </script>
+
+   <!-- Your SDK code -->
+   <script>
+     window.fbAsyncInit = function() {
+       FB.init({
+         xfbml            : true,
+         version          : 'v13.0'
+       });
+     };
+
+     (function(d, s, id) {
+       var js, fjs = d.getElementsByTagName(s)[0];
+       if (d.getElementById(id)) return;
+       js = d.createElement(s); js.id = id;
+       js.src = 'https://connect.facebook.net/en_US/sdk/xfbml.customerchat.js';
+       fjs.parentNode.insertBefore(js, fjs);
+     }(document, 'script', 'facebook-jssdk'));
+   </script>
+
    
     <!-- <script type="text/javascript" src="../src/module/sb-admin-2.min.js"></script> -->
     <!-- built files will be auto injected -->
