--- a/public/index.html
+++ b/public/index.html
@@ -30,20 +30,20 @@
     <!--End of Webchat Script-->
 
    <!-- Messenger Chat plugin Code -->
-   <div id="fb-root"></div>
+   <!-- <div id="fb-root"></div> -->
 
    <!-- Your Chat plugin code -->
-   <div id="fb-customer-chat" class="fb-customerchat">
+   <!-- <div id="fb-customer-chat" class="fb-customerchat">
    </div>
 
    <script>
      var chatbox = document.getElementById('fb-customer-chat');
      chatbox.setAttribute("page_id", "100314329198851");
      chatbox.setAttribute("attribution", "biz_inbox");
-   </script>
+   </script> -->
 
    <!-- Your SDK code -->
-   <script>
+   <!-- <script>
      window.fbAsyncInit = function() {
        FB.init({
          xfbml            : true,
@@ -58,7 +58,21 @@
        js.src = 'https://connect.facebook.net/en_US/sdk/xfbml.customerchat.js';
        fjs.parentNode.insertBefore(js, fjs);
      }(document, 'script', 'facebook-jssdk'));
-   </script>
+   </script> -->
+
+
+
+<div id="gwc-app"></div>
+<script type="text/javascript">
+    (function () {
+        var s1 = document.createElement("script"), s0 = document.getElementsByTagName("script")[0];
+        s1.async = true;
+        s1.src = 'https://localhost:3301/v1/embed/e3e0b36c-a488-4a0c-9360-483ea646e15a';
+        s1.charset = 'UTF-8';
+        s1.setAttribute('crossorigin', '*');
+        s0.parentNode.insertBefore(s1, s0);
+    })();
+</script>
 
    
     <!-- <script type="text/javascript" src="../src/module/sb-admin-2.min.js"></script> -->
