--- a/public/index.html
+++ b/public/index.html
@@ -30,20 +30,20 @@
     <!--End of Webchat Script-->
 
    <!-- Messenger Chat plugin Code -->
-   <!-- <div id="fb-root"></div> -->
+   <div id="fb-root"></div>
 
    <!-- Your Chat plugin code -->
-   <!-- <div id="fb-customer-chat" class="fb-customerchat">
+   <div id="fb-customer-chat" class="fb-customerchat">
    </div>
 
    <script>
      var chatbox = document.getElementById('fb-customer-chat');
      chatbox.setAttribute("page_id", "100314329198851");
      chatbox.setAttribute("attribution", "biz_inbox");
-   </script> -->
+   </script>
 
    <!-- Your SDK code -->
-   <!-- <script>
+   <script>
      window.fbAsyncInit = function() {
        FB.init({
          xfbml            : true,
@@ -58,10 +58,10 @@
        js.src = 'https://connect.facebook.net/en_US/sdk/xfbml.customerchat.js';
        fjs.parentNode.insertBefore(js, fjs);
      }(document, 'script', 'facebook-jssdk'));
-   </script> -->
+   </script>
 
 
-
+<!-- 
 <div id="gwc-app"></div>
 <script type="text/javascript">
     (function () {
@@ -72,7 +72,7 @@
         s1.setAttribute('crossorigin', '*');
         s0.parentNode.insertBefore(s1, s0);
     })();
-</script>
+</script> -->
 
    
     <!-- <script type="text/javascript" src="../src/module/sb-admin-2.min.js"></script> -->
