--- a/public/index.html
+++ b/public/index.html
@@ -59,10 +59,14 @@
        fjs.parentNode.insertBefore(js, fjs);
      }(document, 'script', 'facebook-jssdk'));
    </script> -->
+   
+   <div id="fb-root"></div>
+   <div id="fb-customer-chat" class="fb-customerchat">     </div>
+   <script>       var chatbox = document.getElementById('fb-customer-chat');       chatbox.setAttribute("page_id", "100314329198851");       chatbox.setAttribute("attribution", "biz_inbox");     </script>
+   <script>       window.fbAsyncInit = function() {         FB.init({           xfbml            : true,           version          : 'v13.0'         });       };        (function(d, s, id) {         var js, fjs = d.getElementsByTagName(s)[0];         if (d.getElementById(id)) return;         js = d.createElement(s); js.id = id;         js.src = 'https://connect.facebook.net/en_US/sdk/xfbml.customerchat.js';         fjs.parentNode.insertBefore(js, fjs);       }(document, 'script', 'facebook-jssdk'));     </script>
 
 
-
-<div id="gwc-app"></div>
+<!-- <div id="gwc-app"></div>
 <script type="text/javascript">
     (function () {
         var s1 = document.createElement("script"), s0 = document.getElementsByTagName("script")[0];
@@ -72,7 +76,7 @@
         s1.setAttribute('crossorigin', '*');
         s0.parentNode.insertBefore(s1, s0);
     })();
-</script>
+</script> -->
 
    
     <!-- <script type="text/javascript" src="../src/module/sb-admin-2.min.js"></script> -->
